# $Id: $
#
# Makefile.am for IRRToolSet
#
SUBDIRS = src

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = RELEASE-NOTES \
	src/rpsl/object_log.l src/rpsl/rpsl.l src/rpsl/rpsl.y \
	src/rtconfig/command.l src/rtconfig/command.y \
	contrib/alan.barrett \
	tests/DIFF tests/eg:cisco tests/ornet-gw.ra

CLEANFILES = *~ *.bak
