#  Copyright (c) 2010 Nick Hilliard
#  All rights reserved.
#
#    Permission is hereby granted, free of charge, to any person obtaining a copy
#    of this software and associated documentation files (the "Software"), to deal
#    in the Software without restriction, including without limitation the rights
#    to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
#    copies of the Software, and to permit persons to whom the Software is
#    furnished to do so, subject to the following conditions:
#
#    The above copyright notice and this permission notice shall be included in
#    all copies or substantial portions of the Software.
#
#    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
#    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
#    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
#    AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
#    LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
#    OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
#    THE SOFTWARE.
#
#  Author(s): Nick Hilliard <nick@foobar.org>

noinst_LTLIBRARIES = libdataset.la
libdataset_la_SOURCES = \
	CacheKey.CacheValue.AVLMap.cc CacheKey.CacheValue.Map.cc \
	NormalTermPtr.DLList.cc PrefixRange.Plex.cc PrefixRange.XPlex.cc \
	SymID.Set.cc SymID.VHSet.cc SymbolConjunctPtr.Bag.cc \
	SymbolConjunctPtr.SplayBag.cc SymbolConjunctPtr.SplayNode.cc \
	unsigned.OXPSet.cc unsigned.Plex.cc unsigned.Set.cc \
	unsigned.XPlex.cc \
	CacheKey.CacheValue.AVLMap.h CacheKey.CacheValue.Map.h \
	CacheKey.defs.h NormalTermPtr.DLList.h NormalTermPtr.defs.h Pix.h \
	PrefixRange.Plex.h PrefixRange.XPlex.h PrefixRange.defs.h \
	SetOfSymID.hh SetOfUInt.hh SymID.Set.h SymID.VHSet.h SymID.defs.h \
	SymbolConjunctPtr.Bag.h SymbolConjunctPtr.SplayBag.h \
	SymbolConjunctPtr.SplayNode.h SymbolConjunctPtr.defs.h \
	prefixranges.hh unsigned.OXPSet.h unsigned.Plex.h unsigned.Set.h \
	unsigned.XPlex.h unsigned.defs.h

CLEANFILES = *~ *.bak
